# spinploy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dokployOpenAPI.json  openapi.json
app/: .cta.json  .env.example  FRONTEND_README.md  index.html  package.json
app/src/: routeTree.gen.ts  styles.css
app/src/components/: DeploymentLogViewer.tsx  Header.tsx  LogViewer.tsx  LoginForm.tsx  StatusBadge.tsx
app/src/lib/: api-client.ts  api-types.ts  auth.ts  utils.ts
app/src/routes/: __root.tsx  index.tsx
app/src/routes/previews/: $identifier.tsx  index.tsx
bruno/: bruno.json  collection.bru  container logs.bru  containers.bru
scripts/: clean-openapi.ts  dl-openapi.sh
src/: azure_client.rs  config.rs  docker_client.rs  dokploy_client.rs  lib.rs  main.rs  slack_client.rs  slash_cmd.rs
src/api/: mod.rs  previews.rs  types.rs
src/models/: azure.rs  dokploy.rs  mod.rs
