[package]
name = "spinploy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
url = "2.5.4"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
futures = "0.3.31"
regress = "0.10.0"
config = "0.15.18"
